package edu.hitsz.application;

import edu.hitsz.factory.*;
import edu.hitsz.aircraft.*;
import edu.hitsz.prop.*;
import edu.hitsz.dao.*;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.basic.AbstractFlyingObject;
import org.apache.commons.lang3.concurrent.BasicThreadFactory;

import javax.swing.*;
import java.awt.*;
import java.awt.image.BufferedImage;
import java.net.URL;
import java.util.*;
import java.util.List;
import java.util.concurrent.*;

/**
 * 游戏主面板，游戏启动
 *
 * @author hitsz
 */
public class Game extends JPanel {

    private int backGroundTop = 0;

    /**
     * Scheduled 线程池，用于任务调度
     */
    private final ScheduledExecutorService executorService;

    /**
     * 时间间隔(ms)，控制刷新频率
     */
    private int timeInterval = 40;

    private final HeroAircraft heroAircraft;
    private final List<EnemyAircraft> enemyAircrafts;
    private final List<BaseBullet> heroBullets;
    private final List<BaseBullet> enemyBullets;
    private final List<AbstractProp> props;

    private EnemyFactory enemyFactory;

    /**
     * 屏幕中出现的敌机最大数量
     */
    private int enemyMaxNumber = 5;

    /**
     * 当前得分
     */
    private int score = 0;
    /**
     * 当前时刻
     */
    private int time = 0;

    /**
     * 周期（ms)
     * 指示敌机的产生频率、英雄机子弹的发射频率
     */
    private int cycleDuration = 600;
    private int cycleTime = 0;

    /**
     * 周期（ms)
     * 指示敌机子弹的发射频率
     */

    private int cycleDurationEnemy = 1000;
    private int cycleTimeEnemy = 0;

    /**
     * Boss 机出现分数阈值
     */
    private int scoreThreshold = 500;
    private int bossCount = 0;

    /**
     * 游戏结束标志
     */
    private boolean gameOverFlag = false;

    public Game() {
        heroAircraft = HeroAircraft.getInstance();
        enemyAircrafts = new LinkedList<>();
        heroBullets = new LinkedList<>();
        enemyBullets = new LinkedList<>();
        props = new LinkedList<>();

        /**
         * Scheduled 线程池，用于定时任务调度
         * 关于alibaba code guide：可命名的 ThreadFactory 一般需要第三方包
         * apache 第三方库： org.apache.commons.lang3.concurrent.BasicThreadFactory
         */
        this.executorService = new ScheduledThreadPoolExecutor(1,
                new BasicThreadFactory.Builder().namingPattern("game-action-%d").daemon(true).build());

        //启动英雄机鼠标监听
        new HeroController(this, heroAircraft);

    }

    private void gameOverAction() {
        URL iconURL = getClass().getResource("/images/logo-blue.png"); // 使用推荐的绝对路径
        ImageIcon icon = new ImageIcon(iconURL);
        Image image = icon.getImage();
        int targetWidth = 64;
        int targetHeight = 64;
        Image scaledImage = image.getScaledInstance(targetWidth, targetHeight, Image.SCALE_SMOOTH);
        icon = new ImageIcon(scaledImage);
        String playerName = (String)JOptionPane.showInputDialog(
                null,
                "Please enter your name:",
                "input",
                JOptionPane.PLAIN_MESSAGE,
                icon,
                null,
                null
        );
        if (playerName == null || playerName.trim().isEmpty()) {
            playerName = "testUserName";
        }

        GameScoreDao gameScoreDao = new GameScoreDaoImpl();
        gameScoreDao.addScore(new GameScore(playerName, this.score));

        gameScoreDao.saveScores();
        List<GameScore> leaderboard = gameScoreDao.getAllScores();

        System.out.println("\n**************************************");
        System.out.println("              得分排行榜                ");
        System.out.println("**************************************");

        for (int i = 0; i < leaderboard.size(); i++) {
            GameScore entry = leaderboard.get(i);
            String[] dataParts = entry.toDataString().split(",");
            System.out.printf("第%d名: %s, 得分: %d, 时间: %s%n",
                    i + 1,
                    entry.getPlayerName(),
                    entry.getScore(),
                    dataParts[2]
            );
        }
    }

    /**
     * 游戏启动入口，执行游戏逻辑
     */
    public void action() {

        // 定时任务：绘制、对象产生、碰撞判定、击毁及结束判定
        Runnable task = () -> {

            time += timeInterval;


            // 周期性执行（控制频率）
            if (timeCountAndNewCycleJudge()) {
                System.out.println(time);
                // 新敌机产生
                double prob = Math.random();
                if (enemyAircrafts.size() < enemyMaxNumber) {
                    EnemyAircraft newEnemy;
                    if ((score % scoreThreshold == 0) && (score != 0) && (bossCount == 0)) {
                        enemyFactory = new BossEnemyFactory();
                        bossCount++;
                    } else if (prob < 0.05) {
                        enemyFactory = new ElitePlusEnemyFactory();
                    } else if (prob < 0.20) {
                        enemyFactory = new EliteEnemyFactory();
                    } else {
                        enemyFactory = new MobEnemyFactory();
                    }
                    newEnemy = enemyFactory.createEnemy();
                    if (newEnemy != null) {
                        enemyAircrafts.add(newEnemy);
                    }
                }
                shootActionHero();
            }

            if (timeCountAndNewCycleJudgeEnemy()) {
                // 飞机射出子弹
                shootActionEnemy();
            }

            // 子弹移动
            bulletsMoveAction();

            // 飞机移动
            aircraftsMoveAction();

            // 撞击检测
            crashCheckAction();

            // 后处理
            postProcessAction();

            //每个时刻重绘界面
            repaint();

            // 游戏结束检查英雄机是否存活
            if (heroAircraft.getHp() <= 0) {
                // 游戏结束
                executorService.shutdown();
                gameOverFlag = true;
                gameOverAction();
                System.out.println("Game Over!");
            }

        };

        /**
         * 以固定延迟时间进行执行
         * 本次任务执行完成后，需要延迟设定的延迟时间，才会执行新的任务
         */
        executorService.scheduleWithFixedDelay(task, timeInterval, timeInterval, TimeUnit.MILLISECONDS);

    }

    //***********************
    //      Action 各部分
    //***********************

    private boolean timeCountAndNewCycleJudge() {
        cycleTime += timeInterval;
        if (cycleTime >= cycleDuration) {
            // 跨越到新的周期
            cycleTime %= cycleDuration;
            return true;
        } else {
            return false;
        }
    }

    private boolean timeCountAndNewCycleJudgeEnemy() {
        cycleTimeEnemy += timeInterval;
        if (cycleTimeEnemy >= cycleDurationEnemy) {
            // 跨越到新的周期
            cycleTimeEnemy %= cycleDurationEnemy;
            return true;
        } else {
            return false;
        }
    }

    private void shootActionEnemy() {
        // TODO 敌机射击
        for (EnemyAircraft enemy : enemyAircrafts) {
            enemyBullets.addAll(enemy.shoot());
        }
    }

    private void shootActionHero() {
        // 英雄射击
        heroBullets.addAll(heroAircraft.shoot());
    }

    private void bulletsMoveAction() {
        for (BaseBullet bullet : heroBullets) {
            bullet.forward();
        }
        for (BaseBullet bullet : enemyBullets) {
            bullet.forward();
        }
    }

    private void aircraftsMoveAction() {
        for (EnemyAircraft enemyAircraft : enemyAircrafts) {
            enemyAircraft.forward();
        }
    }


    /**
     * 碰撞检测：
     * 1. 敌机攻击英雄
     * 2. 英雄攻击/撞击敌机
     * 3. 英雄获得补给
     */
    private void crashCheckAction() {
        // TODO 敌机子弹攻击英雄
        for (BaseBullet bullet : enemyBullets) {
            if (bullet.notValid()) {
                continue;
            }
            if (heroAircraft.crash(bullet)) {
                heroAircraft.decreaseHp(bullet.getPower());
                bullet.vanish();
            }
        }

        // 英雄子弹攻击敌机
        for (BaseBullet bullet : heroBullets) {
            if (bullet.notValid()) {
                continue;
            }
            for (EnemyAircraft enemyAircraft : enemyAircrafts) {
                if ((enemyAircraft instanceof BossEnemy) && enemyAircraft.notValid()) {
                    bossCount = 0;
                    continue;
                }
                if (enemyAircraft.notValid()) {
                    // 已被其他子弹击毁的敌机，不再检测
                    // 避免多个子弹重复击毁同一敌机的判定
                    continue;
                }
                if (enemyAircraft.crash(bullet)) {
                    // 敌机撞击到英雄机子弹
                    // 敌机损失一定生命值
                    enemyAircraft.decreaseHp(bullet.getPower());
                    bullet.vanish();
                    if (enemyAircraft.notValid()) {
                        // TODO 获得分数，产生道具补给
                        score += enemyAircraft.getScore();
                        props.addAll(enemyAircraft.getProps());
                    }
                }
                // 英雄机 与 敌机 相撞，均损毁
                if (enemyAircraft.crash(heroAircraft) || heroAircraft.crash(enemyAircraft)) {
                    enemyAircraft.vanish();
                    heroAircraft.decreaseHp(Integer.MAX_VALUE);
                }
            }

        }

        // Todo: 我方获得道具，道具生效
        Iterator<AbstractProp> pit = props.iterator();
        while (pit.hasNext()) {
            AbstractProp prop = pit.next();
            if (prop.notValid()) {
                pit.remove();
                continue;
            }
            prop.forward();
            if (prop.crash(heroAircraft)) {
                prop.activate(heroAircraft);
            }
        }

    }

    /**
     * 后处理：
     * 1. 删除无效的子弹
     * 2. 删除无效的敌机
     * <p>
     * 无效的原因可能是撞击或者飞出边界
     */
    private void postProcessAction() {
        enemyBullets.removeIf(AbstractFlyingObject::notValid);
        heroBullets.removeIf(AbstractFlyingObject::notValid);
        enemyAircrafts.removeIf(AbstractFlyingObject::notValid);
    }


    //***********************
    //      Paint 各部分
    //***********************

    /**
     * 重写paint方法
     * 通过重复调用paint方法，实现游戏动画
     *
     * @param  g
     */
    @Override
    public void paint(Graphics g) {
        super.paint(g);

        // 绘制背景,图片滚动
        g.drawImage(ImageManager.BACKGROUND_IMAGE, 0, this.backGroundTop - Main.WINDOW_HEIGHT, null);
        g.drawImage(ImageManager.BACKGROUND_IMAGE, 0, this.backGroundTop, null);
        this.backGroundTop += 1;
        if (this.backGroundTop == Main.WINDOW_HEIGHT) {
            this.backGroundTop = 0;
        }

        // 先绘制子弹，后绘制飞机
        // 这样子弹显示在飞机的下层
        paintImageWithPositionRevised(g, enemyBullets);
        paintImageWithPositionRevised(g, heroBullets);

        paintImageWithPositionRevised(g, enemyAircrafts);

        // 绘制道具
        paintImageWithPositionRevised(g, props);

        g.drawImage(ImageManager.HERO_IMAGE, heroAircraft.getLocationX() - ImageManager.HERO_IMAGE.getWidth() / 2,
                heroAircraft.getLocationY() - ImageManager.HERO_IMAGE.getHeight() / 2, null);

        //绘制得分和生命值
        paintScoreAndLife(g);

    }

    private void paintImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects) {
        if (objects.size() == 0) {
            return;
        }

        for (AbstractFlyingObject object : objects) {
            BufferedImage image = object.getImage();
            assert image != null : objects.getClass().getName() + " has no image! ";
            g.drawImage(image, object.getLocationX() - image.getWidth() / 2,
                    object.getLocationY() - image.getHeight() / 2, null);
        }
    }

    private void paintScoreAndLife(Graphics g) {
        int x = 10;
        int y = 25;
        g.setColor(new Color(0x1E1F22));
        g.setFont(new Font("SansSerif", Font.BOLD, 22));
        g.drawString("SCORE:" + this.score, x, y);
        y = y + 20;
        g.drawString("LIFE:" + this.heroAircraft.getHp(), x, y);
    }


}
